--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
      
     <h1>Home</h1>
 
-
-    <div id="output">
-
-
-    </div>
+    <form >
+        <div id="output">
+        </div>
+    </form>
     
 </body>
 </html>
